refactor : 로그 프린트 삭제 및 빈 리스트에서 랜덤 요소 가져오기 방지